# diffusion-text-tuner

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: quality.yml  secret-scan.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-execution-surface-and-pipeline-inventory/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  VERIFICATION.md
.planning/phases/02-runtime-contracts-and-run-provenance/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  VERIFICATION.md
.planning/phases/03-data-curriculum-and-dataset-quality/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md  VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: README.md  dpo.json  masked_sft.json  sft.json
configs/accelerate/: multi_gpu.yaml  multi_gpu_8x.yaml  single_gpu.yaml
configs/experiments/: README.md
configs/experiments/dpo/: README.md  (+6 more)
configs/prompts/: curriculum.json  full.json  simple.json
data/: prompts_simple_test.jsonl  scenes_seed.json  thematic.json
docs/: commands.md  data_curriculum.md  data_selection.md  data_source_comparison.md  dataset_quality.md  evaluation_diagnostics.md  evaluation_harness.md  ocr-reward-research.md  pipeline_inventory.md  reward_evaluation.md  runtime_contracts.md  structure_and_extension.md  synthetic_quality.md  thesis_outputs.md  training_comparability.md
docs/handoff/: vps-chat-continuation.md
docs/project-page/: index.html  style.css
docs/security/: history_cleanup.md
experiments/: README.md
experiments/legacy/: profile_refl_step.py
experiments/ocr_reward_tests/: test_eslav_entropy.py  test_paddleocr.py  test_paddleocr_extended.py  test_paddleocr_v5.py  test_qwen_yes_prob.py  test_trocr.py
reports/final/: README.md  benchmark_prompts_v2.jsonl  benchmark_prompts_v2.manifest.json  current_model_sources.json  evidence_manifest.json  historical_benchmark_summary.csv  historical_selection_bias.json  prompt_dataset_quality_v1.json  prompt_dataset_source.manifest.json  prompt_training_target_hashes_v1.json
scripts/: README.md  aggregate_heldout_scores.py  analyze_reward_diagnostics.py  audit_git_history.py  build_evidence_manifest.py  build_thesis_outputs.py  check_training_comparability.py  compare_data_sources.py  compare_run_manifests.py  compare_training_runs.py  diagnose_grad_magnitude.py  diagnose_gradient_flow.py  download_dataset.py  eval_quantized_vs_unquantized.py  final_benchmark.py  generate_images.py  generate_simple_dataset.py  inspect_synthetic_dataset.py  materialize_training_data.py  merge_score_shards.py  plot_metrics.py  precompute_text_embeddings.py  preflight_runtime.py  prepare_history_cleanup.py  profile_step.py  run_baseline.sh  run_heldout_evaluation.py  run_manifest.py  run_refl.sh  score_images.py  smoke_environment.py  test_grad_magnitude.py  test_gradient_flow.py  validate_prompt_dataset.py
scripts/cluster/: dpo.sbatch  generate_images.sbatch  merge_scores.sh  score_images.sbatch  setup_env.sh  sft.sbatch
scripts/synth/: build_dataset.py
src/data_quality/: __init__.py  curriculum.py  manifests.py  prompt_validation.py  source_comparison.py  synthetic_quality.py
src/evaluation/: diagnostics.py  evaluate_rewards.py  final_benchmark.py  generate_baseline.py  gold_benchmark.py  heldout.py  reward_interface.py  score_aggregation.py  slices.py  thesis_outputs.py
src/generation/: __init__.py  pipeline.py
src/plotting/: __init__.py  training_metrics.py
src/prompt_pipeline/: __init__.py  assembler.py  config.py  generate.py  llm_client.py  scene_pool.py  style_generator.py  text_generator.py
src/runtime/: __init__.py  artifacts.py  capabilities.py  config_io.py  manifest_diff.py  manifests.py  paths.py  reproducibility.py
src/scoring/: __init__.py  pipeline.py
src/synthesis/: __init__.py  dataset_builder.py
src/toolkit/: __init__.py  extension_points.py
src/training/: checkpointing.py  comparability.py  config.py  dataset.py  dpo_objective.py  dpo_trainer.py  flux2_utils.py  losses.py  masked_sft_trainer.py  refl_trainer.py  rewards.py  runtime.py  sampling.py  schedulers.py  selection.py  sft_trainer.py
tests/: test_characterization_config_artifacts.py  test_characterization_docs.py  test_cli_help.py  test_data_quality_docs.py  test_data_source_comparison.py  test_document_links.py  test_download_dataset.py  test_evaluation_command_docs.py  test_evaluation_reward_interface.py  test_evaluation_scoring_outputs.py  test_evaluation_slices_gold.py  test_extension_points_docs.py  test_final_benchmark_coverage.py  test_final_benchmark_prompts.py  test_generation_pipeline_contracts.py  test_git_history_audit.py  test_heldout_evaluation_harness.py  test_heldout_score_aggregation.py  test_install_surface.py  test_losses.py  test_merge_score_shards.py  test_plotting_pipeline_contracts.py  test_prepare_history_cleanup.py  test_prompt_curriculum.py  test_prompt_dataset_quality.py  test_prompt_generation_determinism.py  test_prompt_mlx_backend.py  test_public_evidence.py  test_public_ops_contracts.py  test_repository_inventory.py  test_reward_diagnostics.py  test_reward_wrapper_contracts.py  test_runtime_artifacts.py  test_runtime_capabilities.py  test_runtime_config_io.py  test_runtime_docs.py  test_runtime_manifest_diff.py  test_runtime_manifests.py  test_runtime_preflight.py  test_scoring_pipeline_contracts.py  (+12 more)
(+77 files in other folders)
